--- a/setgs.conf
+++ b/setgs.conf
@@ -1,1 +1,5 @@
+# Here is your distribution
+user_distro=
 
+# Enable the mode for creating screenshots for any action with packages
+isEnableSCFAAWP=no
