change: new settings, refactoring

--- a/conf.conf
+++ b/conf.conf
@@ -3,3 +3,9 @@ user_distro=
 
 # Enable the mode for creating screenshots for any action with packages
 isEnableSCFAAWP=no
+
+# Shortcut
+isEnableShortcut=yes
+
+# Package managers Arch Linux (If SCFAAWP is enabled)
+PackagesArch="yay pacman"
