changed snapshot logic before package installing the packages

--- a/conf.conf
+++ b/conf.conf
@@ -1,11 +1,11 @@
 # Here is your distribution
-user_distro=
+user_distro=Arch
 
 # Enable the mode for creating screenshots for any action with packages
-isEnableSCFAAWP=no
+isEnableSCFAAWP=yes
 
 # Shortcut
-isEnableShortcut=yes
+isEnableShortcut=no
 
 # Package managers Arch Linux (If SCFAAWP is enabled)
 PackagesArch="yay pacman"
