changed snapshot logic before package installing the packages

--- a/conf.conf
+++ b/conf.conf
@@ -1,5 +1,5 @@
 # Here is your distribution
-user_distro=Arch
+user_distro=
 
 # Enable the mode for creating screenshots for any action with packages
 isEnableSCFAAWP=yes
