changed snapshot logic before package installing the packages

--- a/conf.conf
+++ b/conf.conf
@@ -5,7 +5,7 @@ user_distro=
 isEnableSCFAAWP=yes
 
 # Shortcut
-isEnableShortcut=no
+isEnableShortcut=yes
 
 # Package managers Arch Linux (If SCFAAWP is enabled)
 PackagesArch="yay pacman"
