changed snapshot logic before package installing the packages

--- a/conf.conf
+++ b/conf.conf
@@ -2,7 +2,7 @@
 user_distro=
 
 # Enable the mode for creating screenshots for any action with packages
-isEnableSCFAAWP=yes
+isEnableSCFAAWP=no
 
 # Shortcut
 isEnableShortcut=yes
