--- a/conf.conf
+++ b/conf.conf
@@ -8,4 +8,4 @@ isEnableSCFAAWP=no
 isEnableShortcut=yes
 
 # Package managers Arch Linux (If SCFAAWP is enabled)
-PackagesArch="yay pacman"
+PackagesArch="pacman"
