--- a/conf.conf
+++ b/conf.conf
@@ -7,5 +7,8 @@ isEnableSCFAAWP=no
 # Shortcut
 isEnableShortcut=yes
 
-# Package managers Arch Linux (If SCFAAWP is enabled)
+# Package manager Arch Linux (If SCFAAWP is enabled)
 PackagesArch="pacman"
+
+# Package manager Fedora Linux (If SCFAAWP is enabled)
+PackagesFedora="dnf"
