--- a/conf.conf
+++ b/conf.conf
@@ -1,7 +1,7 @@
 # Here is your distribution
 user_distro=
 
-# Enable the mode for creating screenshots for any action with packages
+# Enable the mode for creating snapshots for any action with packages
 isEnableSCFAAWP=no
 
 # Shortcut
